[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Crew_attack_range.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Crew.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Effects/Bullet_line.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Sprite Frames/crew_spriteframes.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Sprites/Sprite Frames/select_spriteframes.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Scenes/Effects/Human_blood_splatter.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Characters/dead_crew.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/Hurt 4.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/Hurt 5.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/Hurt 3.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/347647__fennelliott__musket.wav" type="AudioStream" id=11]
[ext_resource path="res://Scripts/Work_range.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 119.901

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.95618
height = 5.95596

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 1.36295, -0.749901, 1.24511, 10.2692, 4.39762, 10.2986, 4.33871, -0.661514 )

[sub_resource type="CircleShape2D" id=4]
radius = 15.7879

[node name="Crew" type="Node2D"]
position = Vector2( 340.088, 220.368 )
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
Bullet_line = ExtResource( 3 )
Blood_splatter = ExtResource( 6 )
Corpse = ExtResource( 7 )
death_one = ExtResource( 10 )
death_two = ExtResource( 8 )
death_three = ExtResource( 9 )

[node name="Crew_sprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = ExtResource( 4 )
animation = "shoot"
playing = true

[node name="Barrel" type="Position2D" parent="Crew_sprite"]
position = Vector2( -6, -1.5 )

[node name="Attack_range" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_range"]
shape = SubResource( 1 )

[node name="Body_area" type="Area2D" parent="." groups=[
"creature",
"crew",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body_area"]
position = Vector2( 0.25, 0 )
shape = SubResource( 2 )

[node name="Reload_timer" type="Timer" parent="."]
one_shot = true

[node name="Select_Sprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.607843 )
frames = ExtResource( 5 )
frame = 1
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Musket_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
attenuation = 0.03125

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -2.32634, -4.27692 )
occluder = SubResource( 3 )

[node name="Work_range" type="Area2D" parent="."]
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Work_range"]
shape = SubResource( 4 )
[connection signal="animation_finished" from="Crew_sprite" to="." method="_on_Crew_sprite_animation_finished"]
[connection signal="area_shape_entered" from="Attack_range" to="Attack_range" method="_on_Attack_range_area_shape_entered"]
[connection signal="area_shape_exited" from="Attack_range" to="Attack_range" method="_on_Attack_range_area_shape_exited"]
[connection signal="input_event" from="Body_area" to="." method="_on_Body_area_input_event"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
[connection signal="area_entered" from="Work_range" to="Work_range" method="_on_Work_range_area_entered"]
[connection signal="area_exited" from="Work_range" to="Work_range" method="_on_Work_range_area_exited"]
